@@ -1,17 +1,34 @@
 package net.chaimae.pres;
 
 import net.chaimae.dao.IDao;
+import net.chaimae.metier.IMetier;
 
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.util.Scanner;
 
 public class pres2 {
-    public static void main (String[] args) throws FileNotFoundException, ClassNotFoundException, InstantiationException,IllegalAccessException {
-        Scanner scanner=new Scanner(new File("config.txt"));
+    public static void main (String[] args) throws Exception {
+
+        Scanner scanner = new Scanner(new File("config.txt"));
+
+        // DAO
         String daoClassName = scanner.nextLine();
-        Class cDao = Class.forName(daoClassName);
-        IDao dao=(IDao) cDao.newInstance();
-        System.out.println(dao.getData());
+        Class<?> cDao = Class.forName(daoClassName);
+        IDao d = (IDao) cDao.getDeclaredConstructor().newInstance();
+
+        // Metier
+        String metierClassName = scanner.nextLine();
+        Class<?> cMetier = Class.forName(metierClassName);
+        IMetier metier = (IMetier) cMetier
+                .getConstructor(IDao.class)
+                .newInstance(d);
+        // Methode
+        //IMetier metier = (IMetier) cMetier
+               // .getConstructor()
+                //.newInstance();
+
+
+        System.out.println("RES = " + metier.calcul());
     }
 }
